@@ -26,20 +26,19 @@ import me.desht.pneumaticcraft.api.semiblock.ISemiBlock;
 import me.desht.pneumaticcraft.common.heat.behaviour.HeatBehaviourManager;
 import me.desht.pneumaticcraft.common.recipes.other.HeatPropertiesRecipeImpl;
 import me.desht.pneumaticcraft.common.semiblock.SemiblockTracker;
-import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.block.entity.BlockEntity;
+import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.core.BlockPos;
-import net.minecraft.world.level.LevelAccessor;
 import net.minecraft.world.level.Level;
+import net.minecraft.world.level.LevelAccessor;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraftforge.common.util.LazyOptional;
 
 import javax.annotation.Nonnull;
 import java.util.List;
 import java.util.function.BiPredicate;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 public enum HeatExchangerManager implements IHeatRegistry {
     INSTANCE;
@@ -55,7 +54,7 @@ public enum HeatExchangerManager implements IHeatRegistry {
 
     @Nonnull
     public LazyOptional<IHeatExchangerLogic> getLogic(Level world, BlockPos pos, Direction side, BiPredicate<LevelAccessor,BlockPos> blockFilter) {
-        if (!world.isAreaLoaded(pos, 0)) return LazyOptional.empty();
+        if (!world.isLoaded(pos)) return LazyOptional.empty();
         BlockEntity te = world.getBlockEntity(pos);
         // important: use cap here, not IHeatExchangingTE interface
         if (te != null && te.getCapability(PNCCapabilities.HEAT_EXCHANGER_CAPABILITY, side).isPresent()) {
@@ -66,7 +65,7 @@ public enum HeatExchangerManager implements IHeatRegistry {
             }
             List<ISemiBlock> l = SemiblockTracker.getInstance().getAllSemiblocks(world, pos)
                     .filter(s -> s.getCapability(PNCCapabilities.HEAT_EXCHANGER_CAPABILITY).isPresent())
-                    .collect(Collectors.toList());
+                    .toList();
             if (!l.isEmpty()) {
                 return l.get(0).getCapability(PNCCapabilities.HEAT_EXCHANGER_CAPABILITY);
             }
